--- a/PhoneBlockingApp/android/app/src/main/AndroidManifest.xml
+++ b/PhoneBlockingApp/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.CALL_SCREENING" />
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -22,5 +24,14 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+      <service
+        android:name=".CallBlockerService"
+        android:permission="android.permission.BIND_SCREENING_SERVICE"
+        android:exported="true">
+        <intent-filter>
+          <action android:name="android.telecom.CallScreeningService" />
+        </intent-filter>
+      </service>
     </application>
 </manifest>
